Optimize movement check

--- a/engine.cfg
+++ b/engine.cfg
@@ -2,7 +2,12 @@
 
 name="godot-sokoban"
 main_scene="res://game/Level1.tscn"
+disable_stdout=false
 icon="res://icon.png"
+
+[debug]
+
+debug_port=6007
 
 [display]
 
