--- a/engine.cfg
+++ b/engine.cfg
@@ -16,6 +16,10 @@ width=832
 stretch_mode="2d"
 stretch_aspect="keep"
 
+[input]
+
+ui_cancel=[key(Escape), jbutton(0, 1), key(BackSpace)]
+
 [physics_2d]
 
 default_gravity_vector=Vector2(0, 0)
